# YamaBot

./: CMakeLists.txt  README.md
Data/: UserData.db
Include/: InstructionSet.HPP  MessageProcessingCenter.HPP
Src/: InstructionSet.CPP  Main.CPP  MessageProcessingCenter.CPP
